--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,34 +1,44 @@
 /*news*/
 .news-carousell{
-    height: 600px;
     background-color: #2b2a29;
 }
 
-/*events*/
-.events{
-    height: auto;
-    background-color: #fefefe;
+.news-img{
+    width: 100%;
+    height: 100%;
 }
-.events-head-text{
-    padding-top: 20px;
-    font-size: 24px;
-    text-align: center;
+
+.overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to top, #2b2a29, transparent);
+}
+
+.news-slider-title{
+    font-size: 28px;
+}
+
+.news-slider-text{
+    font-size: 20px;
 }
 
 /*master-classes*/
 .master-class-main{
     height: auto;
-    background-color: #2b2a29;
+    background-color: #fefefe;
 }
 .mc-head-text{
     padding-top: 20px;
     font-size: 32px;
-    color: #fefefe;
+    color: #2b2a29;
     text-align: center;
 }
 .mc-main-text{
     font-size: 24px;
-    color: #fefefe;
+    color: #2b2a29;
     text-align: center;
     padding-top: 20px;
 }
@@ -52,17 +62,17 @@
 
 .contest-main{
     height: auto;
-    background-color: #fefefe;
+    background-color: #2b2a29;
 }
 .contest-head-text{
     text-align: center;
-    color: #000;
+    color: #fefefe;
     font-size: 32px;
     padding-top: 20px;
 }
 .contest-main-text{
     padding-top: 20px;
     font-size: 24px;
-    color: #000;
+    color: #fefefe;
     text-align: center;
 }
