Added role based auth

--- a/src/Pages/AddNews.css
+++ b/src/Pages/AddNews.css
@@ -9,3 +9,11 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.addnews-usertext{
+    color: #fefefe;
+    font-size: 28px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+}
