--- a/src/Components/Navibar.css
+++ b/src/Components/Navibar.css
@@ -15,6 +15,20 @@
     margin-left: 300px;
 }
 
+.nav-button{
+    margin-right: 5px;
+    background-color: #ff8b03;
+    border-color: #ff8b03;
+    font-size: 18px;
+    color: #2b2a29;
+    text-align: center;
+}
+
+.nav-button:hover{
+    background-color: #ee8003;
+    border-color: #ee8003;
+}
+
 @media (max-width: 1400px) {
     .nav-logo{
         margin-left: 20px;
@@ -24,6 +38,9 @@
         margin-left: 20px;
     }
     .nav-link:first-child{
+        margin-left: 20px;
+    }
+    .nav-button:first-child{
         margin-left: 20px;
     }
 }
