--- a/src/Pages/Contest.css
+++ b/src/Pages/Contest.css
@@ -30,3 +30,11 @@
     font-size: 28px;
     padding-bottom: 10px;
 }
+
+.contest-auth-text{
+    color: #fefefe;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
